# techpdfparser

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  OUTPUT_STRUCTURE.md  PRINCIPLES.md  README.md  REVIEW.md  backlog.md  config.example.yaml  constraints-common.txt  pyproject.toml  requirements-amd.txt  requirements-dev.txt  requirements-gpu.txt  requirements.txt
.claude/: CLAUDE.md  settings.local.json
_archive/: Projekt.md  README.md  requirements-dev.txt  requirements-gpu.txt
_archive/src/adapters/chunkers/: section_aware.py
_archive/src/adapters/embedders/: __init__.py  bge_m3.py
_archive/src/adapters/figures/: noop.py
_archive/src/adapters/formula/: __init__.py  pix2tex.py  ppformulanet.py
_archive/src/adapters/fusion/: rrf.py  score_norm.py
_archive/src/adapters/ocr/: olmocr2.py  pymupdf_structured.py  pymupdf_text.py
_archive/src/adapters/parsers/: __init__.py  mineru25.py  pdfplumber_parser.py
_archive/src/adapters/renderers/: __init__.py  pymupdf.py
_archive/src/adapters/vectordb/: qdrant.py
_archive/src/adapters/visual/: clip.py
_archive/src/core/: indexing.py  retrieval.py
_archive/src/core/interfaces/: benchmark.py  chunker.py  fusion.py  indexer.py  visual.py
_archive/src/core/models/: results.py
_archive/src/core/pipelines/: text.py
_archive/src/utils/: jsonl.py  logging.py  runtime.py  sections.py  timing.py
_archive/tests/: test_amd_adapters.py  test_chunker.py  test_cli_doctor.py  test_config.py  test_indexing.py  test_qdrant_payload.py  test_retrieval.py  test_storage_layout.py
configs/: docling_table.yaml  qwen25vl_table.yaml  tatr_table.yaml
docs/: ARCHITEKTUR.md  PROJEKTANALYSE.md  architecture.md  extraction_output.md  principles.md  writing_adapters.md
docs/superpowers/plans/: 2026-04-16-extraction-block.md  2026-04-18-extraction-hardening.md  2026-04-23-staged-extraction-pipeline.md  2026-04-24-extraction-hardening-schema-stable.md
docs/superpowers/specs/: 2026-04-16-extraction-block-design.md  2026-04-18-extraction-hardening-design.md  2026-04-23-staged-extraction-pipeline-design.md  2026-04-24-extraction-hardening-schema-stable-design.md
embedding/: __init__.py
extraction/: __init__.py  __main__.py  config.py  interfaces.py  models.py  output.py  pipeline.py  registry.py
extraction/adapters/: __init__.py  _runtime.py  docling_table.py  mineru25_segmenter.py  olmocr2_text.py  pymupdf_renderer.py  pymupdf_text_segmenter.py  qwen25vl_figure.py  qwen25vl_table.py  stubs.py  tatr_table.py
extraction/stages/: __init__.py  assemble.py  describe_figures.py  extract_text.py  segment.py
extraction/tests/: test_cli.py  test_cli_rebuild.py  test_config.py  test_docling_table_html.py  test_integration_mineru.py  test_mineru25_segmenter.py  test_models.py  test_output.py  test_pipeline.py  test_pymupdf_text_segmenter.py  test_qwen25vl_prompt.py  test_qwen25vl_table_prompt.py  test_registry.py  test_sidecar_merge.py  test_stages_assemble.py  test_stages_describe_figures.py  test_stages_extract_text.py  test_stages_integration.py  test_stages_segment.py  test_tatr_table_html.py
extraction/tests/fixtures/: reference_content_list.json
indexing/: __init__.py
scripts/: build_review_view.py  build_status_slides.py  render_ms_layout_html.py
src/: __main__.py
src/adapters/: __init__.py
src/adapters/chunkers/: __init__.py  fixed_size.py  section_aware.py
src/adapters/embedders/: __init__.py  bge_m3.py  minilm.py
src/adapters/figures/: __init__.py  moondream.py  qwen25vl.py
src/adapters/formula/: __init__.py  ppformulanet.py
src/adapters/fusion/: __init__.py
src/adapters/ocr/: __init__.py  olmocr2.py
src/adapters/parsers/: __init__.py  mineru25.py  pdfplumber_parser.py
src/adapters/vectordb/: __init__.py  memory.py  qdrant.py
src/adapters/visual/: __init__.py  clip.py  colqwen25.py
src/core/: config.py  registry.py  retrieval.py
src/core/interfaces/: __init__.py  embedder.py  extractor.py  figure.py  formula.py  indexer.py  parser.py  renderer.py  retriever.py  visual.py
src/core/models/: __init__.py  document.py  elements.py
src/core/pipelines/: __init__.py  structured.py  text.py  visual.py
src/utils/: ids.py  manifest.py  storage.py
tasks/: extraction_completion_plan.md  lessons.md  todo.md
tests/: test_amd_adapters.py  test_chunker.py  test_config.py  test_ids.py  test_jsonl.py  test_manifest.py  test_memory_vectordb.py  test_mineru_parser.py  test_models.py  test_pipelines.py  test_pymupdf_structured.py  test_rrf.py  test_runtime_fallbacks.py  test_score_norm.py  test_section_aware_chunker.py  test_sections.py
